--- a/src/app/admin/change-user-properties/change-user-properties2.component.html
+++ b/src/app/admin/change-user-properties/change-user-properties2.component.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="row d-flex flex-column justify-content-center  align-items-center">
                   <div class="form-group" >
-                    <label >Бан</label>
+                    <label > Бан&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
                    <select  formControlName="userIsBlocked" class="custom-select">
                      <option value="NONE">0</option>
                      <option value="ONE_DAY">на 1 день</option>
@@ -57,7 +57,7 @@
                   </div>
                 </div>
             <div class="form-group" >
-              <label for="exampleInputEmail1">Заблокировать</label>
+              <label for="exampleInputEmail1">Заблокировать&nbsp;</label>
              <select  formControlName="userIsDeleted" class="custom-select">
 				       <option value="true">Да</option>
 				       <option value="false">Нет</option>
