--- a/src/app/allusers/advertisement/advertisement.component.html
+++ b/src/app/allusers/advertisement/advertisement.component.html
@@ -14,7 +14,7 @@
                                     <p *ngIf="!isUserAdv && can && role!='ROLE_ADMIN'" [ngClass]="can!=true? 'disabled mr-2':'mr-2'" title = "Отправить запрос"  (clock)="sendRequest()" data-toggle="modal" data-target="#RequestModel1">
                                         <i class="far fa-handshake h2"></i>
                                     </p>
-                                    <p *ngIf="role=='ROLE_ADMIN'" data-toggle="modal" data-target="#deleteModalCenter" >
+                                    <p *ngIf="role=='ROLE_ADMIN'" data-toggle="modal" data-backdrop="static" data-keyboard="false" data-target="#deleteModalCenter" >
                                       <i class="fas fa-trash-alt"></i>
                                     </p>
                                     <div *ngIf="order">
@@ -29,7 +29,7 @@
                                     <p (click)="changeAdvStatus()" class="mr-4" title = "Открыть доступ" *ngIf="adv.status=='ARCHIVED'">
                                       <i class="fas fa-lock-open"></i>
                                     </p>
-                                    <p data-toggle="modal" class="mr-4" data-target="#exampleModalCenter" title = "Редактировать" >
+                                    <p data-toggle="modal" class="mr-4" data-target="#exampleModalCenter"  data-backdrop="static" data-keyboard="false" title = "Редактировать" >
                                         <i class="fas fa-edit"></i>
                                     </p>
                                      <p title = "Обновить фото">  
@@ -102,7 +102,7 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <button type="button" class="close" (click)="close()"data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
@@ -135,19 +135,24 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <button type="button" class="close" (click)="deleteClose()" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
+          <div *ngIf="deleteMessage==undefined">
             <span><b>Напишите причину удаления</b></span>
             <form  [formGroup]="service.getDeleteForm()">
               <textarea  class="mt-3" formControlName="comment" type="text" class="form-control" id="Input2" rows="5" aria-describedby="emailHelp" placeholder="Комментарий"></textarea>
             </form>
+          </div>
         </div>
+        <div>
+          <h3 *ngIf="deleteMessage!=undefined">{{deleteMessage}}</h3>
+        <div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Отменить</button>
-          <a href="/"><button type="button" (click)="deleteAdvertisement()" class="btn btn-primary">Удалить</button></a>
+          
+          <button type="button" *ngIf="deleteMessage==undefined" (click)="deleteAdvertisement()" class="btn btn-primary">Удалить</button>
         </div>
       </div>
       
