--- a/src/app/ConversationComponents/chat/dialog.component.html
+++ b/src/app/ConversationComponents/chat/dialog.component.html
@@ -29,7 +29,7 @@
                 </label>
           </div>
           <div class="mb-3 file" *ngFor="let not of allNames; let i = index" (click)="deleteImageFromList(i)">
-              <span  matBadge="x"  matBadgeOverlap="false" >{{not}}</span>
+              <span  matBadge="x"  matBadgeOverlap="false" >{{fileName}}</span>
            </div>
         </div>
         <div *ngIf="isSet">
@@ -65,7 +65,13 @@
       </form>
       <button mat-raised-button class="ml-2" (click)="acceptSettings()"><i class="fas fa-check-circle"></i>Изменить</button>
       <button mat-raised-button class="ml-2" (click)="closeSetings()"><i class="fas fa-minus-circle"></i>Закрыть</button>
-      <input type="file" name="file" id="file"  (change)="handleFileInput($event.target.files)" multiple accept="image/*" class="input-file"/>
+      <div class="example-2">
+            <input type="file" name="file" id="file"  (change)="handleFileInput($event.target.files)"  multiple accept="image/*" class="input-file"/>
+            <label for="file" class="btn btn-tertiary js-labelFile">
+              <i class="icon fa fa-check"></i>
+              <span class="js-fileName"> Загрузить Аватар</span>
+            </label>
+      </div>
       <label for="file" class="btn btn-tertiary js-labelFile">
         <button class="js-fileName" *ngIf="avatar!=undefined" (click)="setAvatar()"><i class="icon fa fa-check"></i> Изменить Аватар</button>
       </label>
