--- a/src/app/ConversationComponents/chat/dialog.component.html
+++ b/src/app/ConversationComponents/chat/dialog.component.html
@@ -29,7 +29,7 @@
                 </label>
           </div>
           <div class="mb-3 file" *ngFor="let not of allNames; let i = index" (click)="deleteImageFromList(i)">
-              <span  matBadge="x"  matBadgeOverlap="false" >{{fileName}}</span>
+              <span  matBadge="x"  matBadgeOverlap="false" >{{not}}</span>
            </div>
         </div>
         <div *ngIf="isSet">
@@ -58,8 +58,8 @@
             <label for="">Имя чата</label>
             <input id="Name" type="text" class="form-control" formControlName="name" autocomplete="off" placeholder="Dialog name">
             <div *ngIf="dgService.getDialogSettingsForm().controls['name'].invalid && dgService.getDialogSettingsForm().controls['name'].touched" >
-              <small  *ngIf="dgService.getDialogSettingsForm().controls['name'].errors.minlength">name is too short</small>
-              <small  *ngIf="dgService.getDialogSettingsForm().controls['name'].errors.maxlength">name is too long</small>
+              <small  *ngIf="dgService.getDialogSettingsForm().controls['name'].errors.minlength">Имя слишком короткое</small>
+              <small  *ngIf="dgService.getDialogSettingsForm().controls['name'].errors.maxlength">Имя слишком длинное</small>
             </div>
           </div>
       </form>
@@ -72,6 +72,7 @@
               <span class="js-fileName"> Загрузить Аватар</span>
             </label>
       </div>
+      <span  matBadge="x"  matBadgeOverlap="false" >{{fileName}}</span>
       <label for="file" class="btn btn-tertiary js-labelFile">
         <button class="js-fileName" *ngIf="avatar!=undefined" (click)="setAvatar()"><i class="icon fa fa-check"></i> Изменить Аватар</button>
       </label>
@@ -80,16 +81,16 @@
       <form [formGroup]="dgService.getUserSearchForm()">
         <h5>Поиск</h5>
         <label for="">Имя</label>
-        <input type="text" class="form-control" formControlName="firstName" autocomplete="off" placeholder="first name">
+        <input type="text" class="form-control" formControlName="firstName" autocomplete="off" placeholder="Имя">
         <div *ngIf="dgService.getUserSearchForm().controls['firstName'].invalid && dgService.getUserSearchForm().controls['firstName'].touched" >
-          <small  *ngIf="dgService.getUserSearchForm().controls['firstName'].errors.minlength">name is too short</small>
-          <small  *ngIf="dgService.getUserSearchForm().controls['firstName'].errors.maxlength">name is too long</small>
+          <small  *ngIf="dgService.getUserSearchForm().controls['firstName'].errors.minlength">Имя слишком короткое</small>
+          <small  *ngIf="dgService.getUserSearchForm().controls['firstName'].errors.maxlength">Имя слишком длинное</small>
         </div>
         <label for="">Фамилия</label>
-        <input type="text" class="form-control" formControlName="lastName" autocomplete="off" placeholder="last name">
+        <input type="text" class="form-control" formControlName="lastName" autocomplete="off" placeholder="Фамилия">
         <div *ngIf="dgService.getUserSearchForm().controls['lastName'].invalid && dgService.getUserSearchForm().controls['lastName'].touched" >
-          <small  *ngIf="dgService.getUserSearchForm().controls['lastName'].errors.minlength">name is too short</small>
-          <small  *ngIf="dgService.getUserSearchForm().controls['lastName'].errors.maxlength">name is too long</small>
+          <small  *ngIf="dgService.getUserSearchForm().controls['lastName'].errors.minlength">Имя слишком короткое</small>
+          <small  *ngIf="dgService.getUserSearchForm().controls['lastName'].errors.maxlength">Имя слишком длинное</small>
         </div>
       </form>
       <button mat-raised-button class="ml-2" (click)="search()"><i class="fas fa-search"></i>Поиск</button>
