--- a/src/app/ConversationComponents/chat/dialog.component.html
+++ b/src/app/ConversationComponents/chat/dialog.component.html
@@ -67,12 +67,12 @@
       <button mat-raised-button class="ml-2" (click)="closeSetings()"><i class="fas fa-minus-circle"></i>Закрыть</button>
       <div class="example-2">
             <input type="file" name="file" id="fil"  (change)="handleFileInput($event.target.files)"  multiple accept="image/*" class="input-file"/>
-            <label for="file" class="btn btn-tertiary js-labelFile">
+            <label for="fil" class="btn btn-tertiary js-labelFile">
               <i class="icon fa fa-check"></i>
               <span class="js-fileName"> Загрузить Аватар</span>
             </label>
       </div>
-      <span class="mb-3"  matBadgeOverlap="false" >{{fileName}}</span>
+      <span *ngIf="fileName != null" class="mb-3"  matBadgeOverlap="false" >{{fileName}}</span>
       <label for="file" class="btn btn-tertiary js-labelFile">
         <button class="js-fileName" *ngIf="avatar!=undefined" (click)="setAvatar()"><i class="icon fa fa-check"></i> Изменить Аватар</button>
       </label>
