--- a/src/app/UserAndGroupComponents/group-page/group-page.component.html
+++ b/src/app/UserAndGroupComponents/group-page/group-page.component.html
@@ -169,13 +169,13 @@
       <form [formGroup]="gs.getUserSearchForm()">
         <h5>Поиск</h5>
         <label for="">Имя</label>
-        <input type="text" class="form-control" formControlName="firstName" autocomplete="off" placeholder="first name">
+        <input type="text" class="form-control" formControlName="firstName" autocomplete="off" placeholder="Имя">
         <div *ngIf="gs.getUserSearchForm().controls['firstName'].invalid && gs.getUserSearchForm().controls['firstName'].touched" >
           <small  *ngIf="gs.getUserSearchForm().controls['firstName'].errors.minlength">Имя слишком короткое</small>
           <small  *ngIf="gs.getUserSearchForm().controls['firstName'].errors.maxlength">Имя слишком длинное</small>
         </div>
         <label for="">Фамилия</label>
-        <input type="text" class="form-control" formControlName="lastName" autocomplete="off" placeholder="last name">
+        <input type="text" class="form-control" formControlName="lastName" autocomplete="off" placeholder="Фамилия">
         <div *ngIf="gs.getUserSearchForm().controls['lastName'].invalid && gs.getUserSearchForm().controls['lastName'].touched" >
           <small  *ngIf="gs.getUserSearchForm().controls['lastName'].errors.minlength">Имя слишком короткое</small>
           <small  *ngIf="gs.getUserSearchForm().controls['lastName'].errors.maxlength">Имя слишком длинное</small>
