--- a/src/app/UserAndGroupComponents/mini-group-card/mini-group-card.component.html
+++ b/src/app/UserAndGroupComponents/mini-group-card/mini-group-card.component.html
@@ -1,12 +1,17 @@
 
-<div *ngIf="true" class="blog-card" routerLink="/groupPage/{{gr.groupId}}">
+<div *ngIf="true" class="blog-card" routerLink="/groupPage/{{group.groupId}}">
     <div class="inner-part">
       <label class="img">
         <img *ngIf="group.image==null"  src='https://mentoringgroup.com/files/images/puzzle-team.jpg'/>
-        <img *ngIf="group.image!=null"  src='http://localhost:1234/getAdvImg/{{group.image}}'/>
+        <img *ngIf="group.image!=null && loading"  [src]="groupImage"/>
       </label>
-      <div class="content " align="center">
-        <div class="title"  >{{gr.name}}</div>
+      <div class="content ">
+        <div class="title">{{group.name}}</div>
+        <label for="">{{group.subjectName}}</label>
+      </div>
+      <div class="mr-4 notification">
+          <mat-icon class="userInfo cursor" *ngIf="group.countNot>0" matBadge={{group.countNot}} matBadgeColor="warn"></mat-icon>
+          <p *ngIf="group.admin">Администратор</p>
       </div>
     </div>
   </div>
