fix groups in user page

--- a/src/app/UserAndGroupComponents/mini-group-card/mini-group-card.component.html
+++ b/src/app/UserAndGroupComponents/mini-group-card/mini-group-card.component.html
@@ -1,5 +1,5 @@
 
-<div *ngIf="true" class="blog-card" routerLink="/groupPage/{{group.groupId}}">
+<div *ngIf="true" class="blog-card" routerLink="/groupPage/{{gr.groupId}}">
     <div class="inner-part">
       <label class="img">
         <img *ngIf="gr.image==null"  src='https://mentoringgroup.com/files/images/puzzle-team.jpg'/>
