--- a/src/app/allusers/order-item/order-item.component.html
+++ b/src/app/allusers/order-item/order-item.component.html
@@ -11,8 +11,6 @@
     </div>
     <div class="description">
       <h1>{{order.advertisement.advertisementName}}</h1>
-      
-
       <h2 *ngIf="myRole=='ROLE_TEACHER'">Заказчик - <span style="cursor:pointer" routerLink="/userPage/{{order.customerId}}">{{order.customerFIO}} <i routerLink="/dialog/{{order.chatId}}" class=" message far fa-paper-plane"></i> </span></h2>   
       <h2 *ngIf="myRole=='ROLE_STUDENT'">Преподаватель - <span style="cursor:pointer" routerLink="/userPage/{{order.freelancerId}}" >{{order.freelancerFIO}} <i routerLink="/dialog/{{order.chatId}}" class=" message far fa-paper-plane"></i>
       </span></h2>        
@@ -26,10 +24,9 @@
             <span *ngFor="let o of rating2; let i = index"></span>	    
           </span>
         </div>
-        <div> <span class="title">Комментарий - </span>{{order.comment}} </div>
+        <div> <span class="title">Отзыв - </span>{{order.comment}} </div>
       </div>
       <span *ngIf="order.status=='СOMPLETED' "class="title">Файлы</span>
-
       <div  class="documents mb-3">
           <div *ngFor="let doc of order.orderDocuments; let i = index" class="document mr-3">
             <span (click)="download(doc.documentKey,doc.documentName)" style="text-align:center;"><i style="font-size:30px;" class="fas fa-download"></i></span>
@@ -55,9 +52,7 @@
           </div>
      </div>
       </div>
-     
-      
-       
+    
       <button  (click)="changeOrderStatus(order)"  *ngIf="myRole=='ROLE_TEACHER' && order.nextStatus!=undefined" class="btn btn-success mt-2 mr-3">
         <span class="button-text">{{getNextStatus(order.nextStatus)}}</span>
       </button>
