--- a/src/app/admin/user-document-item/user-document-item.component.html
+++ b/src/app/admin/user-document-item/user-document-item.component.html
@@ -3,7 +3,7 @@
         <img *ngIf="user.userImageKey!=undefined" src="http://95.30.222.140:1234/getuserimg/{{user.userImageKey}}" alt="profile_pic" style="width:70px; height:70px; border-radius:50%;">
         <img  *ngIf="user.userImageKey==undefined" src="https://dontshake.org/media/k2/items/cache/71f67488b0857639cee631943a3fc6fa_XL.jpg" alt="profile_pic" style="width:55px">
         <div class="name">{{user.firstname}} {{user.lastname}}</div>
-        <div>Учитель</div>
+        <div>Преподаватель</div>
     </div>
     <div class="part2">
        <div class="data mt-1">
