--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -24,7 +24,7 @@
 
 .walpaper {
     width: 100vw;
-    background: url("https://i0.wp.com/leadchangegroup.com/wp-content/uploads/2017/10/Fotolia_97176232_Subscription_Monthly_M_1_.jpg?fit=1922%2C989&ssl=1") no-repeat;
+    background: url("https://www.gulbenkian.co.uk/wp-content/uploads/2019/09/Canva-Group-of-Cheerful-Students-.jpg") no-repeat;
     background-size: cover;
-    height:90vh;
+    height:70vh;
   }
