--- a/src/app/admin/change-user-properties/change-user-properties2.component.html
+++ b/src/app/admin/change-user-properties/change-user-properties2.component.html
@@ -67,7 +67,7 @@
               <label for="exampleInputEmail1">Роль</label>
               <select  formControlName="userRole" class="custom-select">
               <option selected value="ROLE_ADMIN">Администратор</option>
-              <option value="ROLE_TEACHER">Преподователь</option>
+              <option value="ROLE_TEACHER">Преподaватель</option>
               <option value="ROLE_STUDENT">Студент</option>
            </select>
             </div>
